I resolved the bugs related to the function that checks for line breaks, make the line break on contentEditable div on Firefox, write statements that check if the note that has been edited is empty.

--- a/css/style.css
+++ b/css/style.css
@@ -539,6 +539,7 @@ section, nav {
 
 .edit-note-content {
   width: 100%;
+  overflow-wrap: break-word;
   font-size: 1.7rem;
   color: #171738;
   background: #ffffff;
